# ultrafiles

./: .gitignore  DEVELOPMENT_PLAN.md  LICENSE  README.md  build_app.sh  check_gtk_version.py  check_version.py  debug_audio.py  debug_coords.py  install.sh  logs03.md  meson.build  reproduce_media.py  run.py  run_tests.py  test_sidebar.py
.agent/skills/github_sync/: SKILL.md
.agent/skills/gtk_best_practices/: SKILL.md
.agent/skills/media_integration/: SKILL.md
.agent/skills/performance_optimization/: SKILL.md
.agent/skills/testing_strategy/: SKILL.md
.agent/workflows/: development_rails.md  try1.md
data/: com.ultrafiles.UltraFiles.desktop.in  com.ultrafiles.UltraFiles.gschema.xml  com.ultrafiles.UltraFiles.metainfo.xml.in  gschemas.compiled  meson.build
data/icons/: meson.build
data/resources/: style.css  ultrafiles.gresource  ultrafiles.gresource.xml
po/: POTFILES  meson.build
src/: __init__.py  application.py  main.py  meson.build  ultrafiles.in  window.py
src/dialogs/: __init__.py  batch_rename_dialog.py  confirm_dialog.py  metadata_dialog.py  properties_dialog.py  remix_dialog.py  rename_dialog.py
src/services/: __init__.py  clipboard.py  clipboard_service.py  directory_loader.py  favorites_service.py  file_operations.py  git_service.py  meme_editor_service.py  meme_metadata_service.py  metadata_service.py  recursive_loader.py  search_service.py  sorting.py  tags_service.py  thumbnail_service.py
src/utils/: __init__.py
src/viewers/: __init__.py  media_viewer.py
src/views/: __init__.py  file_grid_view.py  file_list_view.py
src/widgets/: __init__.py  directory_tree.py  file_item.py  path_bar.py  search_bar.py  sidebar.py  terminal_panel.py
tests/: conftest.py  test_media_detection.py  test_recursive_loader.py
tests/unit/: debug_path.py  test_clipboard_service.py  test_favorites_service.py  test_file_operations.py  test_git_service.py  test_meme_metadata_service.py  test_search_service.py  test_sorting.py  test_tags_service.py  test_thumbnail_service.py
